<resources>
    <string name="app_name">expensee</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="add">+</string>
    <string name="current_saldo">Current Saldo</string>
    <string name="saldo">Current Saldo:</string>
    <string name="plus_minus">+/-</string>
    <string name="info">Information zur Zahlung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_exptwo">Expensee is a platform which could help you to save all important income and expenses in your daily life.
         \n\nEasy to use, your budget tracker is also safe and only accessible for you.</string>
    <string name="reg">Please Register Yourself First!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_acc">Already have an account?</string>
    <string name="about">About</string>
    <string name="mainPage">Main Page</string>
    <string name="Log_out">Log Out</string>
    <string name="open_data_button">Open Data</string>
    <string name="expensee_phrase">Your Android Budget Tracker App</string>
    <string name="proceed_button">Proceed</string>
    <string name="shift_phrase">Manage your budget with the easiest approach</string>
    <string name="waren_buffet">Do not save what is left after spending, but spend what is left after saving.</string>
    <string name="saved">Save</string>
    <string name="fact_type_expensee">Expensee</string>

    <!-- String methods -->
    <string name="addEuro">%1$d €</string>
    <string name="desc">Description</string>
    <string name="input_date">Input Date</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
</resources>