<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_twenty"
            android:layout_marginEnd="@dimen/size_twenty"
            android:orientation="vertical"
            android:padding="@dimen/size_eight"
            tools:layout_marginTop="@dimen/size_ten">

            <ImageView
                android:layout_width="@dimen/size_twoHundred"
                android:layout_height="@dimen/size_twoHundred"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/expensee"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginEnd="@dimen/size_twenty"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/size_twenty"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="@dimen/size_eight"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_ten"
                android:layout_marginEnd="@dimen/size_twenty"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/size_twenty"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/size_eight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginEnd="@dimen/size_twenty"
                android:padding="@dimen/size_eight"
                android:layout_gravity="end"
                android:text="@string/forgot_password" />

        </LinearLayout>
    </ScrollView>


</layout>
